--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,15 +2,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Playfair Display', serif;
 }
 
 :root {
     --laranja: rgb(253, 114, 39);
     --branco: #fff;
+    --fundo: rgb(251, 231, 181);
 }
 
 body {
-    background: var(--branco);
+    background: var(--fundo);
+    height: 100vh;
+    width: 100%;
+    justify-content: center;
 }
 
 h1, h2, p {
@@ -18,10 +23,21 @@ h1, h2, p {
 }
 
 .img-principal {
-    width: 45vw;
+    width: 40vw;
     height: 30vh;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 10px auto;
+    background: var(--laranja);
+    border: transparent 1px;
+    background: var(--laranja);
+    box-shadow: 0 0 5px 1px rgb(4, 4, 4);
+    border-radius: 10px;
+}
+
+.img-principal:hover {
+    width: 41vw;
+    height: 31vh;
+    margin: 10px auto;
+    background: var(--branco);
 }
 
 .button-ar {
@@ -38,7 +54,21 @@ h1, h2, p {
 
 .lanches {
     width: 100vw;
-    height: 100%;
-    margin: 20px auto 20px auto;
+    margin: 10px auto;
     text-align: center;
+    font-family: 'Playfair Display', serif;
+    display: flex;
+}
+
+.tituloLanche {
+    font-size: 2rem;
+    margin-top: 5px;
+}
+
+.home {
+    width: 100vw;
+    margin: 10px auto;
+    text-align: center;
+    font-family: 'Playfair Display', serif;
+    display: block;
 }
