--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,6 +9,7 @@
     --laranja: rgb(253, 114, 39);
     --branco: #fff;
     --fundo: rgb(251, 231, 181);
+    --preto: #000;
 }
 
 body {
@@ -39,12 +40,22 @@ button:hover {
     height: 70px;
     font-size: 20px;
     background: var(--branco);
-    color: #000;
-    box-shadow: 0 0 5px 1px rgb(4, 4, 4);
+    color: var(--preto);
+    box-shadow: 0 0 5px 1px var(--preto);
     border-radius: 10px;
     padding: 20px;
     border-radius: 10px;
     cursor: pointer;
+}
+
+button a {
+    text-decoration: none;
+    list-style: none;
+}
+
+button a:hover {
+    text-decoration: none;
+    list-style: none;
 }
 
 .img-principal {
